--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "jorum",
-  "version": "0.1.0",
-  "main": "index.js",
+  "version": "0.1.1",
+  "main": "lib/index.js",
   "repository": "git@github.com:awmleer/jorum.git",
   "author": "awmleer <awmleer@sparker.xyz>",
   "license": "MIT",
   "private": false,
+  "files": ["lib"],
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js"
+    "start": "webpack-dev-server --config webpack.config.js",
+    "build": "gulp prebuild && tsc"
   },
   "peerDependencies": {
     "react": "^16.5.2",
@@ -20,6 +22,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
     "awesome-typescript-loader": "^5.2.1",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
