--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "awmleer <awmleer@sparker.xyz>",
   "license": "MIT",
   "private": false,
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
     "build": "gulp prebuild && tsc"
@@ -23,6 +25,7 @@
     "@types/react-dom": "^16.0.8",
     "awesome-typescript-loader": "^5.2.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
