--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "jorum",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "lib/index.js",
   "repository": "git@github.com:awmleer/jorum.git",
   "author": "awmleer <awmleer@sparker.xyz>",
   "description": "Model layer with rx.js for React applications.",
-  "keywords": ["react, rx.js", "rxjs", "global state"],
+  "keywords": [
+    "react, rx.js",
+    "rxjs",
+    "global state"
+  ],
   "license": "MIT",
   "private": false,
   "files": [
