--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jorum",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "lib/index.js",
   "repository": "git@github.com:awmleer/jorum.git",
   "author": "awmleer <awmleer@sparker.xyz>",
@@ -16,8 +16,7 @@
     "lib"
   ],
   "scripts": {
-    "build": "gulp prebuild && tsc",
-    "publish": "publish lib"
+    "build": "gulp prebuild && tsc"
   },
   "peerDependencies": {
     "react": "16.x",
