--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@types/react-dom": "^16.0.8",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
-    "react": "16.5.x",
-    "react-dom": "16.5.x",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
     "rxjs": "6.3.x",
     "typescript": "^3.1.1"
   }
