--- a/example/package.json
+++ b/example/package.json
@@ -6,11 +6,12 @@
     "start": "webpack-dev-server --config webpack.config.js"
   },
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "rxjs": "^6.3.3",
     "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8"
+    "@types/react-dom": "^16.0.8",
+    "jorum": "file:../lib",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
