--- a/example/package.json
+++ b/example/package.json
@@ -6,11 +6,11 @@
     "start": "webpack-dev-server --config webpack.config.js"
   },
   "dependencies": {
-    "@types/react": "^16.4.14",
+    "@types/react": "16.7.x",
     "@types/react-dom": "^16.0.8",
     "jorum": "file:../lib",
-    "react": "16.7.0-alpha.0",
-    "react-dom": "16.7.0-alpha.0",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
