--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "gulp prebuild && tsc"
+    "build": "gulp prebuild && tsc",
+    "test": "jest"
   },
   "peerDependencies": {
     "react": "16.x",
     "rxjs": "6.x"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.10",
     "@types/react": "16.7.x",
     "@types/react-dom": "^16.0.8",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
+    "jest": "^23.6.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
     "rxjs": "6.3.x",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.1.1"
   }
 }
