--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: node_js
 node_js:
   - "lts/*"
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.12.3
+  - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn install
 script:
-  - yarn test
+  - yarn global add codecov
+  - yarn test --coverage
   - yarn build
+after_success:
+  - codecov
 cache:
   yarn: true
   directories:
