--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "outDir": "./lib"
   },
   "include": [
-    "./src"
+    "./src/**/*"
   ],
   "exclude": [
-    "**/__tests__"
+    "**/__tests__",
+    "node_modules"
   ]
 }
