--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jorum",
-  "version": "1.1.0",
+  "version": "1.2.0-alpha.0",
   "main": "index.js",
   "repository": "git@github.com:awmleer/jorum.git",
   "author": "awmleer <awmleer@sparker.xyz>",
