--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jorum",
-  "version": "1.2.0-alpha.3",
+  "version": "1.2.0-alpha.4",
   "main": "index.js",
   "repository": "git@github.com:awmleer/jorum.git",
   "author": "awmleer <awmleer@sparker.xyz>",
@@ -40,7 +40,7 @@
     "react-test-renderer": "^16.8.0",
     "react-testing-library": "^5.5.4",
     "rxjs": "6.3.x",
-    "ts-jest": "^23.10.5",
+    "ts-jest": "24.x",
     "typescript": "3.1.x"
   },
   "dependencies": {
